cros: Fix capturing orientation

Instead of setting the rotation as part of the transform on
ash root window, call viz SetDisplayTransformHint so that
capturing code as a consumer of viz could get the correct
orientation.

Bug: 847693
Change-Id: Id70f91dc84fc9274145d5a160a51b8c7fa50deed
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1825892
Reviewed-by: kylechar <kylechar@chromium.org>
Reviewed-by: Scott Violet <sky@chromium.org>
Reviewed-by: Khushal <khushalsagar@chromium.org>
Reviewed-by: Mitsuru Oshima <oshima@chromium.org>
Commit-Queue: Xiyuan Xia <xiyuan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#707004}

Former-commit-id: 099f851f8ccda3b642dcbdf270d251b4d6aee576