content/browser/compositor/gpu_process_transport_factory.h
@@ -106,6 +106,8 @@ class GpuProcessTransportFactory : public ui::ContextFactory,
   void AddVSyncParameterObserver(
       ui::Compositor* compositor,
       viz::mojom::VSyncParameterObserverPtr observer) override;
+  void SetDisplayTransformHint(ui::Compositor* compositor,
+                               gfx::OverlayTransform transform) override;
 
   // ImageTransportFactory implementation.
   void DisableGpuCompositing() override;
