ui/compositor/host/host_context_factory_private.h
@@ -90,6 +90,8 @@ class HostContextFactoryPrivate : public ContextFactoryPrivate {
   void AddVSyncParameterObserver(
       Compositor* compositor,
       viz::mojom::VSyncParameterObserverPtr observer) override;
+  void SetDisplayTransformHint(Compositor* compositor,
+                               gfx::OverlayTransform transform) override;
 
  private:
   struct CompositorData {
